@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>adapquest</artifactId>
 		<groupId>ch.idsia.adaptive</groupId>
-		<version>1.2</version>
+		<version>1.5</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -19,6 +19,19 @@
 	</properties>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources/</directory>
+				<targetPath>.</targetPath>
+				<includes>
+					<include>**/*.xlsx</include>
+					<include>**/*.csv</include>
+					<include>**/*.txt</include>
+					<include>**/*.xml</include>
+					<include>**/*.yaml</include>
+				</includes>
+			</resource>
+		</resources>
 		<testResources>
 			<testResource>
 				<directory>src/test/resources/</directory>
@@ -31,6 +44,34 @@
 				</includes>
 			</testResource>
 		</testResources>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 
 	<dependencies>
